--- a/src/package.json
+++ b/src/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/vitorrafael/final-project/issues"
   },
-  "homepage": "https://github.com/vitorrafael/final-project#readme"
+  "homepage": "https://github.com/vitorrafael/final-project#readme",
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.14",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
+  }
 }
