--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Source code for the Spaced Repetition based learning using 'Flashcards' and the SuperMemo Algorithm by Piotr Wozniak",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register './**/*.ts'"
   },
   "repository": {
     "type": "git",
