chore: Adds chai-as-promised test dependency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "module": "CommonJS",
         "target": "ES2019",
-        "types": ["node", "mocha"]
+        "types": ["node", "mocha"],
+        "esModuleInterop": true
     },
     "include": [
         "src"
