chore: Extracts test into different folder structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
-    "compilerOptions": {
-        "module": "CommonJS",
-        "target": "ES2019",
-        "types": ["node", "mocha"],
-        "esModuleInterop": true
-    },
-    "include": [
-        "src"
-    ]
+  "compilerOptions": {
+    "module": "CommonJS",
+    "target": "ES2019",
+    "types": ["node", "mocha"],
+    "esModuleInterop": true
+  },
+  "include": ["src", "test"]
 }
