--- a/package.json
+++ b/package.json
@@ -35,17 +35,20 @@
     "check-coverage": true,
     "all": true,
     "include": [
-        "src/**/!(*.spec.*).[tj]s?(x)"
+      "src/**/!(*.spec.*).[tj]s?(x)"
     ],
     "exclude": [
-        "src/_tests_/**/*.*"
+      "src/_tests_/**/*.*"
     ],
     "reporter": [
-        "html",
-        "lcov",
-        "text",
-        "text-summary"
+      "html",
+      "lcov",
+      "text",
+      "text-summary"
     ],
     "report-dir": "coverage"
-}
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.1"
+  }
 }
