--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/express": "^4.17.14",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.14",
     "chai": "^4.3.6",
@@ -50,6 +51,7 @@
     "report-dir": "coverage"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "sqlite3": "^5.1.1"
   }
 }
