--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "./bin",
     "module": "CommonJS",
     "target": "ES2019",
     "types": ["node", "mocha"],
