--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:start": "npm run build && npm run start",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.spec.ts'",
     "test:coverage": "nyc npm run test",
-    "diagram": "tsuml2 --glob \"./src/**/*.ts\""
+    "diagram": "tsuml2 --glob \"./src/**/*.ts\"",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,11 @@
     "@types/express": "^4.17.14",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^8.26.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
