--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,6 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    // "complexity": ["error", { "max": 2 }]
+    "complexity": ["error", { "max": 3 }]
   }
 }
